--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const pages = {
   clicksend     :{api:'https://status.clicksend.com/api/v2/summary.json',link:'https://status.clicksend.com'},
   leadpages     :{api:'https://status.leadpages.com/api/v2/summary.json',link:'https://status.leadpages.com'},
   circle        :{api:'https://status.circle.so/api/v2/summary.json',link:'https://status.circle.so'},
-  anthropic     :{api:'https://status.anthropic.com/api/v2/summary.json',link:'https://status.anthropic.com',cors:true},
+  anthropic     :{api:'https://status.claude.com/api/v2/summary.json',link:'https://status.claude.com',cors:true},
   openai        :{api:'https://status.openai.com/api/v2/summary.json',link:'https://status.openai.com'},
 
   gohighlevel   :{api:'https://api.pulsetic.com/public/status/status.gohighlevel.com',link:'https://status.gohighlevel.com',pulsetic:true},
