--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@ const pages = {
   pipedrive     :{api:'https://status.pipedrive.com',link:'https://status.pipedrive.com',sorry:true,cors:true},
 
   gworkspace    :{api:'https://www.google.com/appsstatus/dashboard/incidents.json',link:'https://www.google.com/appsstatus/dashboard',cors:true,google:true},
-  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true}
+  gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
 
-  cloudflare       :{api:'https://www.cloudflarestatus.com//api/v2/summary.json',link:'https://www.cloudflarestatus.com/'},
+  cloudflare       :{api:'https://www.cloudflarestatus.com//api/v2/summary.json',link:'https://www.cloudflarestatus.com/'}
+  
 };
 
 // on fusionne avec ce que l'utilisateur avait ajouté
